# 00_Repaso

./: .travis.yml  CMakeLists.txt  README.md
test/: CMakeLists.txt
test/01_POO/: CMakeLists.txt  test.cpp
test/02_Templates/: CMakeLists.txt
test/03_Excepciones/: CMakeLists.txt
test/04_CalcSegundos/: CMakeLists.txt
test/05_OperatorsOverload/: CMakeLists.txt
test/06_Tiempo/: CMakeLists.txt
